--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   "author": "techmatt101",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/artifact": "^1.1.1",
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.0.1",
+    "adm-zip": "^0.5.10"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.0",
     "@types/node": "^16.11.11",
     "@vercel/ncc": "^0.36.1",
     "prettier": "^2.2.1",
